--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>test branch</title>
+    <title>test branch 22</title>
   </head>
   <body>
     <h1>Faqih</h1>
