--- a/index.html
+++ b/index.html
@@ -10,4 +10,16 @@
     <h2>kece</h2>
     <a href="foto/WhatsApp Image 2024-06-30 at 18.39.23_309b4ae8.jpg"></a>
   </body>
+  <html>
+  <head>
+    <style>
+      body {
+        background-color:red ;
+      }
+    </style></se>
+  </head>
+  <body>
+    <p>Teks ini akan ditampilkan</p>
+  </body>
+</html>
 </html>
