--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>test branch 22</title>
   </head>
   <body>
-    <h1>Faqih</h1>
+    <h1>Faozi</h1>
     <h2>kece</h2>
     <a href="foto/WhatsApp Image 2024-06-30 at 18.39.23_309b4ae8.jpg"></a>
   </body>
