--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
   <body>
     <h1>Faozi</h1>
     <h2>kece</h2>
-    <a href="foto/WhatsApp Image 2024-06-30 at 18.39.23_309b4ae8.jpg"></a>
+    <button style="position: absolute;" onclick=gantiFoto()>Ganti foto</button>
+    <img id="foto2" src="foto/2.jpg"></img>
   </body>
-  <html>
-  <head>
-    <style>
-      body {
-        background-color:red ;
-      }
-    </style></se>
-  </head>
-  <body>
-    <p>Teks ini akan ditampilkan</p>
-  </body>
+
+  <script>
+    function gantiFoto() {
+      console.log('ganti foto..')
+      let foto2 = document.getElementById('foto2')
+      foto2.src = 'foto/1.png'
+      alert("foto telah diganti")
+    }
+  </script>
 </html>
-</html>
+
