--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>test branch 22</title>
   </head>
   <body>
-    <h1>Faozi</h1>
+    <he1>bonge</he1></h1>
     <h2>kece</h2>
     <button style="position: absolute;" onclick=gantiFoto()>Ganti foto</button>
     <img id="foto2" src="foto/2.jpg"></img>
